@@ -85,12 +85,12 @@ module Selenium
       private
 
       def generate_as_json(value, camelize_keys: true)
-        if value.respond_to?(:as_json)
-          value.as_json
-        elsif value.is_a?(Hash)
+        if value.is_a?(Hash)
           value.each_with_object({}) do |(key, val), hash|
             hash[convert_json_key(key, camelize: camelize_keys)] = generate_as_json(val, camelize_keys: camelize_keys)
           end
+        elsif value.respond_to?(:as_json)
+          value.as_json
         elsif value.is_a?(Array)
           value.map { |val| generate_as_json(val, camelize_keys: camelize_keys) }
         elsif value.is_a?(Symbol)
